--- a/src/Cinema/CinemaBundle/Resources/views/layout.html.twig
+++ b/src/Cinema/CinemaBundle/Resources/views/layout.html.twig
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Devschool</a>
+            <a class="navbar-brand" href="index.html">Cinema</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -68,6 +68,8 @@
         <div class="col-md-12">
             <h1>Accueil</h1>
             <p>Bienvenue sur le site Symfony de Devschool</p>
+            {% block body %}{% endblock %}
+
         </div>
 
     </div>
