--- a/src/Cinema/CinemaBundle/Resources/views/Cinema/film.html.twig
+++ b/src/Cinema/CinemaBundle/Resources/views/Cinema/film.html.twig
@@ -1,18 +1,48 @@
 {% extends 'CinemaCinemaBundle::layout.html.twig' %}
+
+
+
     {% block body %}
 
+<div class="container">
 
-<ul>
-    {% for film in films %}
-        <li>
-            <h2>{{ film.Titre }}</h2>
-            <span>{{ film.Auteurs }}</span>
-            <br>
-            <p>{{ film.Resume }}</p>
-            <br>
-            <p>{{ film.Sortie }}</p>
+    <div class="row">
 
-        </li>
-    {% endfor %}
-</ul>
+        <div class="col-md-3">
+            <p class="lead">Cinéma</p>
+            <div class="list-group">
+                <a href="cinema-films.html" class="list-group-item active">Films</a>
+                <a href="cinema-realisateurs.html" class="list-group-item">Réalisateurs</a>
+            </div>
+        </div>
+
+        <div class="col-md-9">
+
+            <h2>Liste des films</h2>
+
+            <br />
+            {% for film in films %}
+
+            <div class="thumbnail">
+                <div class="caption-full">
+                    <h4 class="pull-right">Science-Fiction</h4>
+                    <h4>{{ film.Titre }}</h4>
+                    <p>{{ film.Resume }}</p>
+                </div>
+                <div class="ratings">
+                    <p class="pull-right">        {{ film.Sortie|date('d/m/Y') }}</p>
+                    <p>Réalisé par : <a href="cinema-films-realisateur.html">{{ film.Auteurs }}</a></p>
+                </div>
+            </div>
+            {% endfor %}
+
+
+
+
+
+        </div>
+
+    </div>
+
+</div>
     {% endblock %}
