--- a/src/Cinema/CinemaBundle/Resources/views/layout.html.twig
+++ b/src/Cinema/CinemaBundle/Resources/views/layout.html.twig
@@ -62,16 +62,12 @@
 <!-- Page Content -->
 <div class="container">
 
-    <div class="row" style="margin-top: 100px;">
-        <div class="col-md-2">
-            <button class="btn btn-lg btn-success"><a href="http://127.0.0.1:8000/film/liste">Films</a></button>
-        </div>
-        <div class="col-md-10">
+    <div class="row" >
             <h1>Accueil</h1>
             <p>Bienvenue sur le site Symfony de Devschool</p>
 
             {% block body %}    {% endblock %}
-        </div>
+
 
     </div>
 
