--- a/src/Cinema/CinemaBundle/Resources/views/Cinema/film.html.twig
+++ b/src/Cinema/CinemaBundle/Resources/views/Cinema/film.html.twig
@@ -11,8 +11,8 @@
         <div class="col-md-3">
             <p class="lead">Cinéma</p>
             <div class="list-group">
-                <a href="cinema-films.html" class="list-group-item active">Films</a>
-                <a href="cinema-realisateurs.html" class="list-group-item">Réalisateurs</a>
+                <a href="{{ path('page_liste') }}" class="list-group-item active">Films</a>
+                <a href="{{ path('page_realisateur') }}" class="list-group-item">Réalisateurs</a>
             </div>
         </div>
 
@@ -31,7 +31,7 @@
                 </div>
                 <div class="ratings">
                     <p class="pull-right">        {{ film.Sortie|date('d/m/Y') }}</p>
-                    <p>Réalisé par : <a href="cinema-films-realisateur.html">{{ film.Auteurs }}</a></p>
+                    <p>Réalisé par : {{ film.Auteurs }}</p>
                 </div>
             </div>
             {% endfor %}
