--- a/src/Cinema/CinemaBundle/Resources/views/Cinema/realisateur.html.twig
+++ b/src/Cinema/CinemaBundle/Resources/views/Cinema/realisateur.html.twig
@@ -16,6 +16,8 @@
             <div class="list-group">
                 <a href="{{ path('page_liste') }}" class="list-group-item active">Films</a>
                 <a href="{{ path('page_realisateur') }}" class="list-group-item">Réalisateurs</a>
+                <a href="{{ path('page_categorie', {'id': film.id}) }}"><p>voir ses films</p> </a>
+
             </div>
         </div>
         <div class="col-md-9">
