--- a/src/Cinema/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Cinema/AdminBundle/Resources/views/layout.html.twig
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Accueil - Devschool</title>
+    <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ asset('css/form.css') }}" />
 
     <!-- Bootstrap Core CSS -->
@@ -25,25 +26,72 @@
     <![endif]-->
 
 </head>
-
-<body>
-
-<!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
-        <a><button class="btn btn-lg btn-default">Ajouter</button></a>
-        <a><button class="btn btn-lg btn-default">supprimer</button></a>
-        <a><button class="btn btn-lg btn-default">liste</button></a>
-
-
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="http://127.0.0.1:8000/film/liste">Cinema</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li>
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            Film
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="{{ path('admin_film_liste') }}">liste</a></li>
+                            <li><a href="{{ path('admin_ajout_film') }}">ajouter</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            Realisateur
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="{{ path('admin_personne_liste') }}">liste</a></li>
+                            <li><a href="{{ path('admin_ajout_personne') }}">ajouter</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            Genre
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="{{ path('admin_genre_liste') }}">liste</a></li>
+                            <li><a href="{{ path('admin_ajout_genre') }}">ajouter</a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
     </div>
     <!-- /.container -->
 </nav>
+<body>
+
+<!-- Navigation -->
+
 
 <!-- Page Content -->
 <div class="container">
 
-    <div class="row" >
+    <div class="row" style="padding-top: 150px">
 
 
         {% block body %}    {% endblock %}
@@ -75,7 +123,8 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
-
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
