--- a/src/Cinema/CinemaBundle/Resources/views/Cinema/filmographie.html.twig
+++ b/src/Cinema/CinemaBundle/Resources/views/Cinema/filmographie.html.twig
@@ -16,7 +16,9 @@
         </div>
         <div class="ratings">
             <p class="pull-right">sorti le  {{ film.Sortie|date('d/m/Y') }}</p>
-            <p>Réalisé par{{ film.Auteurs}}</p>
+            <p>Réalisé par{{ film.personne}}</p>
+            <br>
+            <p>Genre : {{ film.genre }}</p>
         </div>
 
 
