--- a/src/Cinema/CinemaBundle/Resources/views/layout.html.twig
+++ b/src/Cinema/CinemaBundle/Resources/views/layout.html.twig
@@ -38,19 +38,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Devschool</a>
+            <a class="navbar-brand" href="http://127.0.0.1:8000/film/liste">Cinema</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="#">Bibliothèque</a>
-                </li>
-                <li>
-                    <a href="cinema-films.html">Cinéma</a>
-                </li>
-                <li>
-                    <a href="#">Admin</a>
+                    <a href="http://127.0.0.1:8000/admin/film/liste">Admin</a>
                 </li>
             </ul>
         </div>
